--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "measure": "node index.js measure file_test/rapport.pdf"
+    "measure": "node index.js measure-generated-content file_test"
   },
   "keywords": [
     "teaching",
