--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "measure": "node index.js measure-generated-content file_test",
-    "autograde": "node index.js autograde -c file_test/autograde.json -r file_test/tp6 --shrink -o file_test/professorgpt.json"
+    "autograde": "node index.js autograde -c file_test/autograde.json -r file_test/tp6 -o file_test/professorgpt.json"
   },
   "keywords": [
     "professor",
