--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,8 @@
 name: Publish package
 
 on:
-  release:
-    types: [created]
+  push:
+    tags: '*'
 
 jobs:
   build:
@@ -27,6 +27,7 @@ jobs:
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
+      - run: npm version ${{  github.ref_name }}
       - run: npm ci
       - run: npm publish
         env:
