--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gpt-professor",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Tool used to create a simple CLI around ChatGPT, in order to help any kind of teaching activity",
   "main": "index.js",
   "bin": "./index.js",
@@ -8,7 +8,7 @@
     "test": "exit 0",
     "measure": "node index.js measure-generated-content file_test",
     "autograde": "node index.js autograde -c file_test/autograde2.json -r file_test -o file_test/professorgpt.json --minify --debug",
-    "bard-autograde": "node index.js bard-autograde -c file_test/autograde2.json -r file_test -o file_test/professorgpt.json --minify --debug"
+    "autograde-gemini": "node index.js autograde-gemini -c file_test/autograde2.json -r file_test -o file_test/professorgpt.json --minify --debug"
   },
   "keywords": [
     "professor",
@@ -29,6 +29,7 @@
     "cssnano": "^6.0.1",
     "cssnano-preset-lite": "^3.0.0",
     "dotenv": "^16.3.1",
+    "gemini-ai": "^1.1.0",
     "globby": "^13.2.2",
     "googlebard": "^1.0.7",
     "jsdom": "^22.1.0",
