--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "jsdom": "^22.1.0",
     "minify-xml": "^4.0.0",
     "octokit": "^3.1.2",
-    "openai": "^3.3.0",
+    "openai": "^4.63.0",
     "pdf-parse": "^1.1.1",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.47",
     "shelljs": "^0.8.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   },
   "compilerOptions": {
     "rootDir": ".",
